# elfparser

./: CMakeLists.txt  Readme.md
include/elfparser/: Ehdr.hpp  Elf.hpp  ElfStdElement.hpp  elfdatatype.hpp
src/: CMakeLists.txt  Ehdr.cpp  Elf.cpp
test/: CMakeLists.txt  Ehdr.cpp
test/resources/: invalid.elf
